# CardMarketScraper

./: .gitignore  card_summary.csv  extract.py  model_solved.lp  optimize.py  pyproject.toml  run  scrape.py  scraped_data.csv  summarize.py  summary_sellers.csv  wishlist.txt
