[tool.poetry]
name = "cardmarketscrape"
version = "0.1.0"
description = ""
authors = ["Lyndon Fan <lyndon0808@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
selenium = "^4.9.0"
undetected-chromedriver = "^3.4.6"
lxml = "^4.9.2"
bs4 = "^0.0.1"
pandas = "^2.0.1"
mip = "^1.15.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipython = "^8.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
